--- a/app/src/main/res/layout/activity_add_extras.xml
+++ b/app/src/main/res/layout/activity_add_extras.xml
@@ -73,6 +73,15 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+            <Spinner
+                android:id="@+id/request_types_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:entries="@array/request_types_for_extra_requests"
+                android:padding="5dp"
+                android:theme="@style/blackSpinnerTheme" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/item_name_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
