--- a/app/src/main/res/layout/item_request_extras.xml
+++ b/app/src/main/res/layout/item_request_extras.xml
@@ -203,14 +203,14 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/description"
+                                android:text="@string/type"
                                 android:textAllCaps="true"
                                 android:textColor="@color/text_light_blue"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/description"
+                                android:id="@+id/type"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/test_text"
