--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -104,7 +104,8 @@
             android:id="@+id/requests_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable"
+            app:tabMode="fixed"
+            app:tabGravity="fill"
             android:layout_marginTop="5dp"
             app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">
 
