--- a/app/src/main/res/layout/activity_add_job_order.xml
+++ b/app/src/main/res/layout/activity_add_job_order.xml
@@ -54,22 +54,28 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:weightSum="3"
+            android:weightSum="5"
             android:orientation="vertical"
             android:layout_marginTop="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:orientation="vertical">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/requests"
                     android:textColor="@color/gray"
                     android:textSize="14sp"/>
-
+                <ProgressBar
+                    android:id="@+id/requests_loading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center" />
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view_requests"
                     android:layout_width="match_parent"
@@ -81,8 +87,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:orientation="vertical"
+                android:id="@+id/extras_layout_container"
                 android:layout_marginTop="5dp">
                 <TextView
                     android:layout_width="wrap_content"
@@ -90,6 +97,13 @@
                     android:text="@string/extras"
                     android:textColor="@color/gray"
                     android:textSize="14sp"/>
+
+                <ProgressBar
+                    android:id="@+id/extras_loading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view_extras"
@@ -109,12 +123,6 @@
 
 
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center" />
 
 
     <Button
