--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -72,7 +72,7 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/description"
                 android:padding="5dp"
-                android:src="@drawable/request_1" />
+                tools:src="@drawable/request_1" />
 
 
             <params.com.stepview.StatusViewScroller
